updated to .net6.0; removed more mohis references

--- a/MoHIS.Activation.Portal/MoHIS.Activation.API/Properties/launchSettings.json
+++ b/MoHIS.Activation.Portal/MoHIS.Activation.API/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iis": {
-      "applicationUrl": "http://localhost/MoHIS/Activation/API",
+      "applicationUrl": "http://localhost/Activation/API",
       "sslPort": 0
     },
     "iisExpress": {
@@ -21,7 +21,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "MoHIS.Activation.API": {
+    "Activation.API": {
       "commandName": "IIS",
       "launchUrl": "api/customer",
       "environmentVariables": {
