--- a/MoHIS.Activation.Portal/MoHIS.Activation.API/Dockerfile
+++ b/MoHIS.Activation.Portal/MoHIS.Activation.API/Dockerfile
@@ -7,17 +7,17 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /src
-COPY ["MoHIS.Activation.API/MoHIS.Activation.API.csproj", "MoHIS.Activation.API/"]
-COPY ["MoHIS.Activation.Shared/MoHIS.Activation.Shared.csproj", "MoHIS.Activation.Shared/"]
-RUN dotnet restore "MoHIS.Activation.API/MoHIS.Activation.API.csproj"
+COPY ["Activation.API/Activation.API.csproj", "Activation.API/"]
+COPY ["Activation.Shared/Activation.Shared.csproj", "Activation.Shared/"]
+RUN dotnet restore "Activation.API/Activation.API.csproj"
 COPY . .
-WORKDIR "/src/MoHIS.Activation.API"
-RUN dotnet build "MoHIS.Activation.API.csproj" -c Release -o /app/build
+WORKDIR "/src/Activation.API"
+RUN dotnet build "Activation.API.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "MoHIS.Activation.API.csproj" -c Release -o /app/publish
+RUN dotnet publish "Activation.API.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "MoHIS.Activation.API.dll"]
+ENTRYPOINT ["dotnet", "Activation.API.dll"]
