--- a/Device.Activation.Portal/Dockerfile
+++ b/Device.Activation.Portal/Dockerfile
@@ -1,21 +1,21 @@
 #See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
-FROM mcr.microsoft.com/dotnet/aspnet:5.0-buster-slim AS base
+FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 WORKDIR /app
 
-FROM mcr.microsoft.com/dotnet/sdk:5.0-buster-slim AS build
+FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
-COPY ["MoHIS.Activation.API/MoHIS.Activation.API.csproj", "MoHIS.Activation.API/"]
-COPY ["MoHIS.Activation.Shared/MoHIS.Activation.Shared.csproj", "MoHIS.Activation.Shared/"]
-RUN dotnet restore "MoHIS.Activation.API/MoHIS.Activation.API.csproj"
+COPY ["Activation.API/Activation.API.csproj", "Activation.API/"]
+COPY ["Activation.Shared/Activation.Shared.csproj", "Activation.Shared/"]
+RUN dotnet restore "Activation.API/Activation.API.csproj"
 COPY . .
-WORKDIR "/src/MoHIS.Activation.API"
-RUN dotnet build "MoHIS.Activation.API.csproj" -c Release -o /app/build
+WORKDIR "/src/Activation.API"
+RUN dotnet build "Activation.API.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "MoHIS.Activation.API.csproj" -c Release -o /app/publish
+RUN dotnet publish "Activation.API.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "MoHIS.Activation.API.dll"]
+ENTRYPOINT ["dotnet", "Activation.API.dll"]
