added docker specific appsettings; cors working in docker

--- a/Device.Activation.Portal/Activation.API/appsettings.json
+++ b/Device.Activation.Portal/Activation.API/appsettings.json
@@ -1,16 +1,16 @@
 {
   "DatabaseConnectionString": "Server=localhost;Port=5432;Database=dummy;User Id=dummy;Password=dummy",
   "CUSTOMAUTH": {
-    "Key": "HELLOYUCAT_HELLOYUCAT_HELLOYUCAT_HELLOYUCAT_HELLOYUCAT_HELLOYUCAT_HELLOYUCAT_HELLOYUCAT_HELLOYUCAT_HELLOYUCAT_HELLOYUCAT_HELLOYUCAT"
+    "Key": "HELLOHDV_HELLOHDV_HELLOHDV_HELLOHDV_HELLOHDV_HELLOHDV_HELLOHDV_HELLOHDV_HELLOHDV_HELLOHDV_HELLOHDV_HELLOHDV"
   },
   "Jwt": {
-    "Key": "HELLOYUCAT_HELLOYUCAT_HELLOYUCAT_HELLOYUCAT_HELLOYUCAT_HELLOYUCAT_HELLOYUCAT_HELLOYUCAT_HELLOYUCAT_HELLOYUCAT_HELLOYUCAT_HELLOYUCAT",
+    "Key": "HELLOHDV_HELLOHDV_HELLOHDV_HELLOHDV_HELLOHDV_HELLOHDV_HELLOHDV_HELLOHDV_HELLOHDV_HELLOHDV_HELLOHDV_HELLOHDV",
     "Issuer": "http://localhost/",
     "Audience": "http://localhost/",
     "ExpireTime": 30
   },
   "AppSettings": {
-    "Secret": "HELLOYUCAT"
+    "Secret": "HELLOHDV"
   },
   "Logging": {
     "IncludeScopes": false,
